website/static/css/custom_css/index.css
/* ... */
.custom-right-1 {
  position: absolute;
  right: 0;
}
/* ------------------- bottom end ------------------- */
/* ------------------- color start ------------------- */
:root {
  --custom-color-1: rgb(120 120 120);
  --custom-color-2-dark: rgb(90, 90, 90);
  --custom-color-2-light: rgb(180, 180, 180);
  --custom-color-primary: rgb(111, 66, 193);
  --custom-color-primary-darker: rgb(44 26 77);
}
.custom-color-light-1 {
  color: var(--custom-color-1);
}
.custom-color-primary {
  color: var(--custom-color-primary);
}
/* ------------------- color end ------------------- */
/* ------------------- border start ------------------- */
.custom-border-1 {border: 1px solid black;}
.custom-border-2 {border: 1px solid red;}
.custom-border-3 {border: 1px solid blue;}
.custom-border-4 {border: 1px solid green;}
.custom-border-5-dark {
  border: 3px solid var(--custom-color-2-dark);
}
.custom-border-5-light {
  border: 3px solid var(--custom-color-2-light);
}
.custom-border-6-light {
  border: 1px solid var(--custom-color-2-light);
}
.custom-br-1 {
  border-radius: 15px;
}
.custom-br-2-mobile {
  border-radius: 35px;
}
.custom-br-3 {
  border-radius: 25px;
}
.custom-br-4 {
  border-radius: 6px;
}
/* ------------------- border end ------------------- */
/* ------------------- display start ------------------- */
.custom-display-flex {
  display: flex;
}
.custom-display-block {
  display: block;
}
.custom-mobile-display-2 {
  display: none;
}
/* ------------------- display end ------------------- */
/* ------------------- filler start ------------------- */
.custom-filler-1 {
  height: 86px;
}
.custom-filler-2 {
  height: 50px;
}
.custom-filler-3 {
  height: 250px;
}
.custom-filler-4 {
  height: 63.5px;
}
.custom-filler-5 {
  height: 56px;
}
/* ------------------- filler end ------------------- */
/* ------------------- flex start ------------------- */
.custom-fw-1 {
  flex-wrap: wrap;
}
.custom-fw-2 {
  flex-wrap: nowrap;
}
.custom-fw-2-mobile {
  flex-wrap: nowrap;
}
/* ------------------- flex end ------------------- */
/* ------------------- google start ------------------- */
.custom-google-font-1 {
  font-family: 'Open Sans', arial;
}
/* ------------------- google end ------------------- */
/* ------------------- header start ------------------- */
.custom-header-1 {
  font-size: 40px;
}
.custom-header-2 {
  font-size: 30px;
}
.custom-header-mobile-1 {
  font-size: 30px;
}
.custom-header-2-mobile {
  font-size: 30px;
}
.custom-size-3 {
  font-size: 12px;
}
.custom-size-4 {
  font-size: 10px;
}
.custom-header-4 {
  font-size: 20px;
}
.custom-header-4-mobile {
  font-size: 20px;
}
.custom-header-5 {
  font-size: 15px;
}
.custom-header-5-mobile {
  font-size: 15px;
}
.custom-header-6 {
  font-size: 25px;
}
.custom-header-white {
  color: white;
}
.custom-color-2-dark {
  color: var(--custom-color-2-dark);
}
.custom-color-2-light {
  color: var(--custom-color-2-light);
}
/* ------------------- header end ------------------- */
/* ------------------- height start ------------------- */
.custom-height-1-mobile {
  height: 700px;
}
.custom-height-2-mobile {
  height: 450px;
}
.custom-height-3-mobile {
  height: 450px;
}
.custom-height-4 {
  height: 300px;
}
.custom-height-4-mobile {
  height: 600px;
}
.custom-height-5-mobile {
  height: 450px;
}
.custom-height-6 {
  height: 225px;
}
.custom-height-7 {
  height: 25px;
}
.custom-min-height-1 {
  min-height: 350px;
}
/* ------------------- height end ------------------- */
/* ------------------- img start ------------------- */
.custom-img-size-1 {
  height: 40px;
}
.custom-img-size-2 {
  max-width: 25px;
}
.custom-img-size-3 {
  max-width: 90%;
}
.custom-img-size-4 {
  max-height: 20px;
}
.custom-img-size-5 {
  width: 600px;
  max-width: 90%;
}
.custom-img-size-6 {
  max-height: 100px;
}
.custom-img-size-7 {
  max-height: 300px;
}
.custom-img-size-7-mobile {
  max-height: 300px;
}
.custom-img-size-8 {
  width: 125px;
}
.custom-img-size-9 {
  width: 15px;
}
.custom-img-size-10 {
  max-height: 60px;
}
.custom-img-opacity-1 {
  opacity: 0.20;
}
.custom-img-size-11 {
  max-width: 100%;
  max-height: 500px;
}
.custom-img-resize-1:hover {
  transform: scale(1.05);
  transition: 0.25s ease-in-out;
}
/* ------------------- img end ------------------- */
/* ------------------- index start ------------------- */
.custom-index-1 {
  z-index: 1;
}
.custom-index-2 {
  z-index: 2;
}
/* ------------------- index end ------------------- */
/* ------------------- justify start ------------------- */
.custom-jc-1 {
  justify-content: space-evenly;
}
.custom-jc-2 {
  justify-content: space-between;
}
.custom-jc-3 {
  justify-content: center;
}
.custom-jc-4 {
  justify-content: space-around;
}
/* ------------------- justify end ------------------- */
/* ------------------- jQuery start ------------------- */
.uiSearchItemVisible {
  display:inline-block;
}
.uiSearchItemInvisible {
  display: none;
}
.uiSelectAllBlockVisible {
  display:inline-block;
}
.uiSelectAllBlockInvisible {
  display: none;
}
/* ------------------- jQuery end ------------------- */
/* ------------------- list style start ------------------- */
.custom-ls-1 {
  list-style: none;
}
/* ------------------- list style end ------------------- */
/* ------------------- list style start ------------------- */
.custom-line-1 {
  line-height: 40px;
}
/* ------------------- list style end ------------------- */
/* ------------------- margin start ------------------- */
.custom-m-0 {
  margin: 0 0 0 0;
}
.custom-m-1-mobile {
  margin: 15px;
}
.custom-m-1 {
  margin: 10px;
}
.custom-m-2 {
  margin: 20px;
}
.custom-mb-1 {
  margin-bottom: 50px;
}
.custom-mb-2 {
  margin-bottom: 150px;
}
.custom-mb-3 {
  margin-bottom: 100px;
}
.custom-mb-4 {
  margin-bottom: 10px;
}
.custom-mb-5 {
  margin-bottom: 75px;
}
.custom-mb-6 {
  margin-bottom: 25px;
}
.custom-mb-7 {
  margin-bottom: 3px;
}
.custom-mt-1 {
  margin-top: 25px;
}
.custom-mt-2 {
  margin-top: 10px;
}
.custom-mt-3 {
  margin-top: 50px;
}
/* ... */

